<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/viewContainer"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activity.SmsActivity">

  <com.signupdemo.helper.MyViewPager
    android:id="@+id/viewPagerVertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:id="@+id/layout_sms"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorPrimary"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"/>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center_horizontal"
        android:inputType="textCapWords"
        android:text="@string/msg_enter_mobile"
        android:textColor="@android:color/white"
        android:textSize="14dp"/>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/dim_25"
        >


        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/dim_50"
          android:layout_marginTop="@dimen/dim_8"
          android:layout_marginBottom="@dimen/dim_8"
          android:padding="@dimen/dim_2"
          android:background="@drawable/roundshape_email">

          <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="sans-serif-light"
            android:hint="@string/lbl_name"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"/>

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/dim_50"
          android:layout_marginTop="@dimen/dim_8"
          android:layout_marginBottom="@dimen/dim_8"
          android:padding="@dimen/dim_2"
          android:background="@drawable/roundshape_email">

          <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="sans-serif-light"
            android:hint="@string/lbl_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:weightSum="1">


          <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/dim_50"
            android:layout_weight="0.3"
            android:layout_marginTop="@dimen/dim_8"
            android:layout_marginBottom="@dimen/dim_8"
            android:layout_marginRight="@dimen/dim_5"
            android:padding="@dimen/dim_2"
            android:background="@drawable/roundshape_email">

            <EditText
              android:id="@+id/edt_country_code"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@null"
              android:hint="@string/lbl_country_code"
              android:inputType="number"
              android:textColor="@color/colorPrimary"
              android:textSize="@dimen/txt_size_18"

              />

          </android.support.design.widget.TextInputLayout>


          <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/dim_50"
            android:layout_weight="0.7"
            android:layout_marginTop="@dimen/dim_8"
            android:layout_marginBottom="@dimen/dim_8"
            android:padding="2dp"
            android:background="@drawable/roundshape_email">


            <EditText
              android:id="@+id/inputMobile"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@null"
              android:fontFamily="sans-serif-light"
              android:hint="@string/lbl_mobile"
              android:inputType="phone"
              android:maxLength="10"
              android:textColor="@color/colorPrimary"
              android:textCursorDrawable="@null"
              android:textSize="@dimen/txt_size_18"
              />

          </android.support.design.widget.TextInputLayout>


        </LinearLayout>


        <Button
          android:id="@+id/btn_request_sms"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="@dimen/dim_25"
          android:layout_gravity="center_horizontal"
          android:background="@color/colorPrimaryDark"
          android:text="@string/lbl_next"
          android:textColor="@android:color/white"
          android:textSize="14dp"/>
      </LinearLayout>


    </LinearLayout>

    <LinearLayout
      android:id="@+id/layout_otp"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/colorPrimary"
      android:gravity="center_horizontal"
      android:orientation="vertical">

      <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="25dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"/>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center_horizontal"
        android:text="@string/msg_sit_back"
        android:textColor="@android:color/white"
        android:textSize="16dp"/>

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        android:gravity="center_horizontal"
        android:text="@string/msg_manual_otp"
        android:textColor="@android:color/white"
        android:textSize="12dp"/>

      <EditText
        android:id="@+id/inputOtp"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-light"
        android:gravity="center_horizontal"
        android:hint="@string/lbl_enter_otp"
        android:inputType="number"
        android:maxLength="6"
        android:textCursorDrawable="@null"
        android:textSize="18dp"/>

      <Button
        android:id="@+id/btn_verify_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_gravity="center_horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/lbl_submit"
        android:textColor="@android:color/white"
        android:textSize="14dp"/>

    </LinearLayout>

  </com.signupdemo.helper.MyViewPager>


  <ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginBottom="60dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center"
    android:indeterminateTint="@color/colorAccent"
    android:indeterminateTintMode="src_atop"
    android:visibility="gone"/>

  <LinearLayout
    android:id="@+id/layout_edit_mobile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    android:layout_alignParentBottom="true"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
      android:id="@+id/txt_edit_mobile"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@android:color/white"
      android:textSize="16dp"/>

    <ImageButton
      android:id="@+id/btn_edit_mobile"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:layout_marginLeft="10dp"
      android:background="@null"
      android:src="@drawable/ic_edit_mobile"/>
  </LinearLayout>

</RelativeLayout>
